--- a/javascripts/discourse/connectors/below-footer/custom-footer.hbs
+++ b/javascripts/discourse/connectors/below-footer/custom-footer.hbs
@@ -3,7 +3,9 @@
     <div class="flexbox">
       <div class="first-box">
         <div class="heading">
-          {{mainHeading}}
+         <div _ngcontent-ekv-c71="" class="footer-logo">
+         <img _ngcontent-ekv-c71="" alt="abb logo" width="60" height="60" src="https://dev.partnerhub.connect.abb.com/cdn/images/abb-logo_white.svg" class="footer-abb-logo">
+         </div>
         </div>
         <div class="blurb">
           {{blurb}}
